name:                reflex-dnd
version:             0.1.0.0
synopsis:            Exposes a Reflex implementation and interface for Drag and Drop dom widgets.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Marco Toniut
maintainer:          marco.toniut@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Reflex.Dom.DragAndDrop
                       Reflex.Network.Portal
  other-modules:       Util
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
                     , containers
                     , data-default
                     , reflex
                     , reflex-dom
                     , these

                     , classy-prelude
                     , ghcjs-dom
                     , jsaddle
                     , jsaddle-dom
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010


executable example
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fwarn-tabs -funbox-strict-fields -rtsopts -with-rtsopts=-N -O2
  cpp-options: -DUSE_WARP -DUSE_JSADDLE
  build-depends: jsaddle-warp
  build-depends:       base
                     , reflex-dnd
                     , classy-prelude
                     , containers
                     , data-default
                     , file-embed
                     , ghcjs-dom
                     , jsaddle
                     , lens
                     , reflex
                     , reflex-dom
  default-language:    Haskell2010

